// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRow > should omit the currency for transactions from test networks 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative css-1kskd5s"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:min-h-0"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <a
                class="ring-focus group inline-block css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1dlnsgk"
                >
                  <span
                    class="text-sm"
                  >
                    <span
                      class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                      data-testid="TransactionRow__id"
                    >
                      ea63b…5c79b
                    </span>
                  </span>
                </span>
              </a>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start xl:min-h-0 my-0 py-3"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="rounded p-1 css-1dx994f"
              color="secondary"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                color="danger-bg"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="w-30"
                data-testid="TransactionRowAddressing__address-container"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <div
                    class="relative grow text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-primary-600 font-semibold text-sm absolute w-full"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-end items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <div
                class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex items-center space-x-1"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 21 BTC
                  </span>
                </div>
              </div>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-0 my-0 py-3"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 BTC
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative css-1kskd5s"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:min-h-0"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <a
                class="ring-focus group inline-block css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1dlnsgk"
                >
                  <span
                    class="text-sm"
                  >
                    <span
                      class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                      data-testid="TransactionRow__id"
                    >
                      ea63b…5c79b
                    </span>
                  </span>
                </span>
              </a>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start xl:min-h-0 my-0 py-3"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="rounded p-1 css-1dx994f"
              color="secondary"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                color="danger-bg"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="w-40 md:w-50"
                data-testid="TransactionRowAddressing__address-container"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <span
                    class="font-semibold text-sm text-theme-text"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures css-9nx3be"
                      data-testid="TruncateEnd"
                    >
                      ARK Wallet 1
                    </span>
                  </span>
                  <div
                    class="relative grow text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold text-sm absolute w-full"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-end items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <div
                class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex items-center space-x-1"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 121 DARK
                  </span>
                </div>
              </div>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  $0.00
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-0 my-0 py-3"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              $0.00
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group group !border-b-0 css-1kskd5s"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1dlnsgk"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-40 md:w-50"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (DARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex items-center space-x-1"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 DARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group group !border-b-0 css-1kskd5s"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1dlnsgk"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-40 md:w-50"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (DARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex items-center space-x-1"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 DARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render skeleton 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 80px; height: 17px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 80px; height: 17px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <div
              class="flex items-center"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 80px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <div
              class="mr-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 37px; height: 17px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 17px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 justify-end"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 17px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 0px; height: 17px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group relative css-1kskd5s"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pl-6 rounded-l items-start my-0 py-3 xl:min-h-0"
          >
            <div
              class="flex flex-col gap-1 font-semibold"
            >
              <a
                class="ring-focus group inline-block css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-1dlnsgk"
                >
                  <span
                    class="text-sm"
                  >
                    <span
                      class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                      data-testid="TransactionRow__id"
                    >
                      ea63b…5c79b
                    </span>
                  </span>
                </span>
              </a>
              <span
                class="text-xs text-theme-secondary-700 xl:hidden"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="TransactionRow__timestamp"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold items-start xl:min-h-0 my-0 py-3"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="rounded p-1 css-1dx994f"
              color="secondary"
              data-testid="TransactionRow__type"
            >
              Transfer
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex flex-row gap-2"
              data-testid="TransactionRowAddressing__container"
            >
              <div
                class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                color="danger-bg"
                data-testid="TransactionRowAddressing__label"
              >
                To
              </div>
              <div
                class="w-30"
                data-testid="TransactionRowAddressing__address-container"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                >
                  <div
                    class="relative grow text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-primary-600 font-semibold text-sm absolute w-full"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                    <span>
                       
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 justify-end items-start xl:min-h-0 my-0 py-3"
          >
            <div
              class="flex flex-col items-end gap-1"
            >
              <div
                class="flex h-full items-center justify-center rounded px-1.5 css-xqt0aw"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex items-center space-x-1"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 21 BTC
                  </span>
                </div>
              </div>
              <span
                class="text-xs font-semibold text-theme-secondary-700 lg:hidden"
                data-testid="TransactionRow__exchange-currency"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex px-3 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end items-start text-sm text-theme-secondary-900 dark:text-theme-secondary-200 font-semibold xl:min-h-0 my-0 py-3"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 BTC
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
